Added Category model, implemented urls, views to enable filtering products by category, made changes to template to show products category.

--- a/products/templates/home.html
+++ b/products/templates/home.html
@@ -3,7 +3,7 @@
 {% if user.is_authenticated %}
 <ul>
   {% for p in products %}
-  <li>{{p.name}} - {{p.price}}</li>
+  <li>{{p.name}} - {{p.price}} - {{ p.category }}</li>
   {% endfor %}
 </ul>
 {% endif %}
